[tool.poetry]
name = "libby"
version = "0.1.0" # this is not currently used
description = ""
authors = ["vishnu rangiah <vrrangiah@ucdavis.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
file = "/Users/vishnu/testpoe/libby/__init__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
